<resources>
    <string name="app_name">LoginKotlin</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="sign_up">Sign up</string>
    <string name="username_error">Invalid username.</string>
    <string name="password_error">Password incorrect.</string>
    <string name="match_error">Password is incorrect</string>
    <string name="create_new_user">Create new user</string>
</resources>
