<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/sign_up_label"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_marginTop="24dp"
        android:text="@string/create_new_user"
        android:textSize="24sp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="106dp" />

    <EditText
        android:id="@+id/username"
        android:layout_width="231dp"
        android:layout_height="wrap_content"
        android:hint="@string/login"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="77dp"
        tools:layout_editor_absoluteY="77dp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="232dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@+id/username"
        tools:layout_editor_absoluteX="76dp" />

    <EditText
        android:id="@+id/password_confirm"
        android:layout_width="231dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@+id/password"
        tools:layout_editor_absoluteX="77dp" />

    <TextView
        android:id="@+id/password_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/match_error"
        android:textColor="@color/red"
        app:layout_constraintTop_toBottomOf="@+id/password_confirm"
        tools:layout_editor_absoluteX="77dp" />

    <Button
        android:id="@+id/sign_up"
        style="?attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/sign_up"
        app:layout_constraintTop_toBottomOf="@+id/password_error"
        tools:layout_editor_absoluteX="220dp" />

</android.support.constraint.ConstraintLayout>